projects/media/apps/transmission/base/deployment.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
    name: transmission
    labels:
        app: transmission
spec:
    replicas: 0
    serviceName: transmission
    selector:
        matchLabels:
            app: transmission
    template:
        metadata:
            name: transmission
            labels:
                app: transmission
        spec:
            containers:
            - name: transmission
              image: ghcr.io/linuxserver/transmission:4.0.5
              resources:
                requests:
                  cpu: 100m
                  memory: 100Mi
                limits:
                  cpu: '1'
                  memory: 1Gi
              ports:
              - containerPort: 9091
                protocol: TCP
              - containerPort: 51413
                protocol: TCP
              - containerPort: 51413
                protocol: UDP

              volumeMounts:
              - mountPath: /downloads
                name: downloads
              - mountPath: /config
                name: config

            volumes:
            - name: downloads
              persistentVolumeClaim:
                claimName: downloads
            - name: config
              persistentVolumeClaim:
                claimName: transmission-config
